Updating script